--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <section class="imagem" id="img2">
     <p>
-      enho saudade das cartas <br>
+      Tenho saudade das cartas <br>
       Escritas com a própria mão <br>
       Mandava no mês de Junho <br>
       Só chegava no Verão <br>
